<!--
  ~  Aplikasi Surat
  ~     strings.xml
  ~     Created by Rifan Kurniawan on 14/8/2022
  ~     email 	    : cah2701@gmail.com
  ~     Copyright © 2022 Rifan Kurniawan. All rights reserved.
  -->

<resources>
    <string name="app_name">Aplikasi Kearsipan Surat Keluar</string>
    <string name="id">ID</string>
    <string name="kode_cabang">Kode Cabang</string>
    <string name="judul">Judul</string>
    <string name="fileName">Nama File</string>
    <string name="no_surat">No Surat</string>
    <string name="tanggal">Tanggal</string>
    <string name="chose_image">Pilih Foto</string>
    <string name="camera">Camera</string>
    <string name="submit">Simpan</string>
    <string name="delete">Hapus</string>
    <string name="update">Ubah</string>
<!--    <string name="title_activity_splash">Splash</string>-->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>