<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Aplikasi Surat
  ~     activity_update.xml
  ~     Created by Rifan Kurniawan on 14/8/2022
  ~     email 	    : cah2701@gmail.com
  ~     Copyright © 2022 Rifan Kurniawan. All rights reserved.
  -->

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white"
        tools:context=".Activity.UpdateActivity">

        <TextView
            android:layout_gravity="center"
            android:layout_width="370dp"
            android:typeface="serif"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:text="UBAH/HAPUS DATA"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#5463FF"
           />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:paddingStart="10dp"
                android:background="@drawable/custom2"
                android:layout_gravity="center"
                android:typeface="serif"
                android:textStyle="bold"
                android:id="@+id/edt_kode_cabang"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/kode_cabang"
                android:textColor="@color/black"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColorHint="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:paddingStart="10dp"
                android:background="@drawable/custom2"
                android:layout_gravity="center"
                android:typeface="serif"
                android:textStyle="bold"
                android:id="@+id/edt_judul"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/judul"
                android:textColor="@color/black"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColorHint="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:paddingStart="10dp"
                android:background="@drawable/custom2"
                android:layout_gravity="center"
                android:typeface="serif"
                android:textStyle="bold"
                android:id="@+id/edt_no_surat"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/no_surat"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textCapSentences"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:paddingStart="10dp"
                android:background="@drawable/custom2"
                android:layout_gravity="center"
                android:typeface="serif"
                android:textStyle="bold"
                android:id="@+id/edt_tanggal"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/tanggal"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textCapSentences"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:id="@+id/imgHolder"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_gravity="center"
            android:typeface="serif"
            android:textStyle="bold"
            android:background="@drawable/custom1"
            android:id="@+id/btn_galery"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chose_image" />

        <Button
            android:layout_gravity="center"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom1"
            android:id="@+id/btn_submit"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />

    </LinearLayout>
</ScrollView>




